--- a/seminar.bib
+++ b/seminar.bib
@@ -22,6 +22,14 @@
   url =          "https://stevedonovan.github.io/rustifications/2018/08/18/rust-closures-are-hard.html"
 }
 
+@misc { rusttrickhashmap,
+  author =       {Ivan Dubrov},
+  title =        "{Tricking the HashMap}",
+  date =         {June 1},
+  year =         "2018 (accessed May 19, 2021)",
+  url =          "http://idubrov.name/rust/2018/06/01/tricking-the-hashmap.html"
+}
+
 @inproceedings{ cppstd,
   author =       {ISO/IEC},
   title =        "{ISO International Standard ISO/IEC 14882:2020(E) – Programming Language C\texttt{++}}",
@@ -91,7 +99,7 @@
                  http://www.math.utah.edu/pub/tex/bib/rust.bib",
 }
 
-@book{go4,
+@book{ go4,
   added-at =    {2010-06-05T16:40:25.000+0200},
   asin =        {0201633612},
   author =      {Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John M.},
@@ -108,4 +116,46 @@
   timestamp =   {2010-06-05T16:40:25.000+0200},
   title =       {Design Patterns: Elements of Reusable Object-Oriented Software},
   year =        1994
+}
+
+@article{ icccm,
+  author =      {David Rosenthal and Stuart W. Marks},
+  title =       {{Inter-Client Communication Conventions Manual}},
+  url =         {https://www.x.org/releases/X11R7.6/doc/xorg-docs/specs/ICCCM/icccm.html},
+  year =        {1994}
+}
+
+@misc{ ewmh,
+  author =      {{X Desktop Group}},
+  title =       {{Extended Window Manager Hints}},
+  date =        {May},
+  year =        {2005},
+  url =         "https://specifications.freedesktop.org/wm-spec/wm-spec-1.3.html"
+}
+
+@misc{ wayland,
+  author =      {Kristian Høgsberg},
+  title =       {{The Wayland Protocol}},
+  url =         "https://wayland.freedesktop.org/docs/html/ch01.html#sect-Motivation"
+}
+
+@article{ xlib,
+  author =      {James Gettys and Robert W. Scheifler},
+  title =       {{Xlib -- C Language X Interface}},
+  year =        {1985}
+}
+
+@article{ x11,
+  author =      {Robert W. Scheifler and Jim Gettys},
+  title =       {{The X Window System, Version 11}},
+  date =        {October},
+  year =        {1990},
+  journal =     {Software: Practice and Experiment}
+}
+
+@article{ xcb,
+  author =      {Bart Massey and Jamey Sharp},
+  title =       {{XCB: An X Protocol C Binding}},
+  date =        {October},
+  year =        {2001}
 }
