--- a/seminar.tex
+++ b/seminar.tex
@@ -10,6 +10,7 @@
 \usepackage{blindtext}
 \usepackage{xspace}
 \usepackage{minted}
+\usepackage{inconsolata}
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
@@ -24,7 +25,8 @@
 
 \setcitestyle{citesep={,},square}
 
-\usemintedstyle{borland}
+% \usemintedstyle{manni}
+\usemintedstyle{igor}
 
 \newcommand{\cpp}{C\texttt{++}\xspace}
 
@@ -33,14 +35,10 @@
 
 \newenvironment{mintedblock}[1]%[3]%
 {\VerbatimEnvironment
-  % \begin{listing}[ht]
-    % \caption{#2}%
-    % \label{#1}%
     \begin{minted}[fontsize=\small]{#1}%
 }
 {%
     \end{minted}%
-  % \end{listing}
 }
 
 \newenvironment{rustblock}%[2]%
@@ -58,6 +56,20 @@
 {%
   \end{mintedblock}%
 }
+
+\newenvironment{mintedinline}[2]%[3]%
+{\VerbatimEnvironment
+	\mintinline{#1}{#2}%
+}
+
+\newmintinline[rsin]{rust}{fontsize=\small}
+\newmintinline[cppin]{cpp}{fontsize=\small}
+
+\newcommand{\ttt}[1]{{\small\texttt{#1}}}
+
+\newcommand{\rssubsection}[1]{\subsection{\underline{Rust}: #1}}
+\newcommand{\cppsubsection}[1]{\subsection{\underline{\cpp}: #1}}
+\newcommand{\rscppsubsection}[1]{\subsection{\underline{Rust and \cpp}: #1}}
 
 \makeatletter
 \def\ps@footernumberstyle{
